syntax = "proto3";

package email;


service EmailService {
    rpc Send(EmailText) returns (Empty);
}


message EmailText {
    string id = 1;
    string subject = 2;
    string body = 3;
    repeated string phone = 4;
    repeated string recipints = 5;
}

message Empty {}